// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Controlled 1`] = `
<div>
  <button
    class="HvButton-root-97 MuiButton-root MuiButton-text HvButton-ghost-104 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvButton-ghostSVG-111 css-fsero8-MuiButtonBase-root-MuiButton-root"
    style="width: 125px;"
    tabindex="0"
    type="button"
  >
    Click to 
    Open
  </button>
  <div
    class="HvBaseDropdown-root-120 HvDropDownMenu-root-114"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="dropdownMenu-1"
      class="HvDropDownMenu-container-115 HvBaseDropdown-anchor-121"
      id="dropMenu"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="HvButton-root-97 MuiButton-root MuiButton-text HvButton-ghost-104 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-117 HvButton-icon-98 HvButton-ghostSVG-111 css-fsero8-MuiButtonBase-root-MuiButton-root"
        id="dropMenu-icon-button"
        tabindex="0"
        type="button"
      >
        <div
          class="HvIconBase-root-140 HvIconBase-s-142"
          name="MoreOptionsVertical"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
              fill="#414141"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> Disabled 1`] = `
<div>
  <div
    class="HvBaseDropdown-root-55 HvDropDownMenu-root-49"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="dropdownMenu-4"
      class="HvDropDownMenu-container-50 HvBaseDropdown-anchor-56 HvBaseDropdown-rootDisabled-57"
      id="dropMenu"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="HvButton-root-75 MuiButton-root MuiButton-text HvButton-ghost-82 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvButton-ghostDisabled-83 Mui-disabled HvDropDownMenu-icon-52 HvButton-icon-76 HvButton-ghostSVG-89 css-fsero8-MuiButtonBase-root-MuiButton-root"
        disabled=""
        id="dropMenu-icon-button"
        tabindex="-1"
        type="button"
      >
        <div
          class="HvIconBase-root-92 HvIconBase-s-94"
          name="MoreOptionsVertical"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
              fill="#999999"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> General 1`] = `
<div>
  <div
    class="HvBaseDropdown-root-7 HvDropDownMenu-root-1"
  >
    <div
      aria-expanded="false"
      aria-haspopup="menu"
      class="HvDropDownMenu-container-2 HvBaseDropdown-anchor-8"
      id="drop-down-menu-1"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-label="Dropdown menu"
        class="HvButton-root-27 MuiButton-root MuiButton-text HvButton-ghost-34 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-4 HvButton-icon-28 HvButton-ghostSVG-41 css-fsero8-MuiButtonBase-root-MuiButton-root"
        id="drop-down-menu-1-icon-button"
        tabindex="0"
        type="button"
      >
        <div
          class="HvIconBase-root-44 HvIconBase-s-46"
          name="MoreOptionsVertical"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
              fill="#414141"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;
